--- a/src/Bots/css/ChessBot.css
+++ b/src/Bots/css/ChessBot.css
@@ -1,5 +1,18 @@
 .ChessBoardContainer {
-  width: 70%;
+  width: 550px;
+}
+.botPage{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+.btns{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  gap: 5rem;
 }
 .card {
   display: flex;
@@ -18,13 +31,12 @@
   font-family: "Orbitron", sans-serif;
   background: none;
   color: #fff;
-
   transition: 0.3s ease-in-out;
   font-size: 30px;
 }
 .clearBoard {
   width: 100%;
-  padding: 5%;
+  padding: 3%;
   margin: 5px;
   border: 2px solid var(--themecolor);
   margin-top: 20px;
