--- a/src/Bots/css/General.css
+++ b/src/Bots/css/General.css
@@ -1,6 +1,8 @@
 .card{
     height:100%;
-
+}
+.levelContent{
+    width: 60%;
 }
 .headerForBots{
     width: 100%;
@@ -8,13 +10,12 @@
     align-items: center;
     justify-content: center;
     margin-bottom:10px;
-    padding-top:5%;
-    padding-bottom: 5%;
+    padding-top: 3%;
+    padding-bottom: 3%;
     border: 2px solid var(--themecolor) ;
     font-family:"Orbitron", sans-serif;
     background:none;
     color: #fff;
-    
     transition: 0.3s ease-in-out;
     font-size:30px;
 }
