--- a/src/pages/css/ThemePage.css
+++ b/src/pages/css/ThemePage.css
@@ -5,9 +5,8 @@
 .card {
     width: 100%;
     height:100%;
-    max-width: 600px;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 0 2rem;
     background: rgba(0,0,0,0.5);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   
